# tirds

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  deny.toml  justfile
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
config/: tirds-loader.example.toml  tirds.example.toml
crates/tirds/: Cargo.toml
crates/tirds-agents/: Cargo.toml
crates/tirds-agents/src/: claude_cli.rs  error.rs  lib.rs  orchestrator.rs  parser.rs  prompts.rs  specialist.rs  test_support.rs
crates/tirds-agents/tests/: cli_integration.rs  scenarios.rs
crates/tirds-cache/: Cargo.toml
crates/tirds-cache/src/: error.rs  lib.rs  memory.rs  reader.rs  sqlite.rs
crates/tirds-loader/: Cargo.toml
crates/tirds-loader/src/: config.rs  daemon.rs  error.rs  lib.rs  main.rs  writer.rs
crates/tirds-loader/src/sources/: calculations.rs  market_data.rs  mod.rs  stream.rs
crates/tirds-loader/tests/: daemon_lifecycle.rs  wal_stress.rs
crates/tirds-models/: Cargo.toml
crates/tirds-models/src/: agent_message.rs  cache_schema.rs  config.rs  lib.rs  trade_decision.rs  trade_input.rs
crates/tirds/src/: lib.rs  main.rs
examples/: buy_soxl.json  buy_tqqq.json  sell_spxl.json
