[workspace]
resolver = "2"
members = [
    "crates/tirds-models",
    "crates/tirds-cache",
    "crates/tirds-agents",
    "crates/tirds",
    "crates/tirds-loader",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust_decimal = { version = "1", features = ["serde-with-str"] }
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
moka = { version = "0.12", features = ["future"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
clap = { version = "4", features = ["derive"] }
thiserror = "2"
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }
async-trait = "0.1"
toml = "0.8"

tokio-util = { version = "0.7", features = ["rt"] }

# External data source crates
market-data-core = { git = "https://github.com/piekstra/market-data" }
market-data-providers = { git = "https://github.com/piekstra/market-data" }
market-calculations = { git = "https://github.com/piekstra/market-calculations" }
tds = { git = "https://github.com/piekstra/trading-data-stream", features = ["mock"] }

# Workspace crates
tirds-models = { path = "crates/tirds-models" }
tirds-cache = { path = "crates/tirds-cache" }
tirds-agents = { path = "crates/tirds-agents" }
