[package]
name = "tirds-agents"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tirds-models = { workspace = true }
tirds-cache = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rust_decimal = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
rust_decimal_macros = "1"
