[package]
name = "tirds-cache"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tirds-models = { workspace = true }
rusqlite = { workspace = true }
moka = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
