[package]
name = "tirds-loader"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "tirds-loader"
path = "src/main.rs"

[dependencies]
tirds-models = { workspace = true }
market-data-core = { workspace = true }
market-calculations = { workspace = true }
tds = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tempfile = "3"
rust_decimal_macros = "1"
tirds-cache = { workspace = true }
