[package]
name = "tirds-models"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
rust_decimal = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
rust_decimal_macros = "1"
toml = { workspace = true }
