[package]
name = "tirds"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "tirds"
path = "src/lib.rs"

[[bin]]
name = "tirds"
path = "src/main.rs"

[dependencies]
tirds-models = { workspace = true }
tirds-cache = { workspace = true }
tirds-agents = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }
